tests/ui/unknown_name.stderr
Error [E0107]: nothing named `scor` exists here
  --> tests/ui/unknown_name.jet:3:11
    |
  3 |     print(scor);
    |           ^^^^
 Why: a name must be declared before it's used
 Fix: did you mean `score`?
