tests/ui/unknown_name.jet
fn main() {
    val score = 90;
    print(scor);
}
